# ExtractArticleText

./: .gitignore  .replit  FetchArticles.py  main.py  main_bkp.py  output.md  output.txt  pyproject.toml
article_text/: output2_article.txt  output3_article.txt
generated_report/: combined_report.txt  output1_article_report.txt  output2_article_report.txt  output3_article_report.txt
